--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Dashboard</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
+  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body class="bg-gray-100 min-h-screen p-6">
+  <div class="flex justify-between items-center mb-6">
+    <h1 class="text-2xl font-bold">Dashboard</h1>
+    <button id="logoutBtn" class="bg-red-600 text-white px-3 py-2 rounded">Logout</button>
+  </div>
+
+  <div class="bg-white p-6 rounded shadow mb-6">
+    <table id="studentsTable" class="display" style="width:100%">
+      <thead>
+        <tr>
+          <th>Name</th><th>Email</th><th>Mobile</th>
+          <th>Course</th><th>DOB</th><th>Skills</th><th>Actions</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+    <div class="bg-white p-6 rounded shadow">
+      <h2 class="mb-2 font-medium">Course Distribution</h2>
+      <canvas id="pieChart"></canvas>
+    </div>
+    <div class="bg-white p-6 rounded shadow">
+      <h2 class="mb-2 font-medium">Registrations by Month</h2>
+      <canvas id="barChart"></canvas>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
