--- a/register.html
+++ b/register.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,18 +5,25 @@
   <title>Register</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <!-- Plugins -->
+  
+  <!-- Select2 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+  <!-- Flatpickr -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+  <!-- Tagify -->
   <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="bg-gray-100 min-h-screen">
   <div class="max-w-3xl mx-auto bg-white p-8 rounded-lg shadow">
     <h2 class="text-2xl font-bold mb-6">New Registration</h2>
+    <!-- Dynamic form will render here -->
     <div id="dynamicFormContainer"></div>
   </div>
 
