--- a/login.html
+++ b/login.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Login</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="bg-white shadow-lg rounded-lg p-8 w-full max-w-md">
-    <h2 class="text-2xl font-bold mb-6 text-center">Login</h2>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+  <div class="bg-white p-6 rounded shadow w-full max-w-sm">
+    <h1 class="text-2xl font-bold mb-4">Login</h1>
     <form id="loginForm" class="space-y-4">
       <div>
-        <label>Email</label>
-        <input type="email" id="loginEmail" required class="w-full border px-3 py-2 rounded" />
+        <label class="block font-medium">Email</label>
+        <input id="email" type="email" class="w-full border px-2 py-2 rounded" required>
       </div>
       <div>
-        <label>Password</label>
-        <input type="password" id="loginPassword" required class="w-full border px-3 py-2 rounded" />
+        <label class="block font-medium">Password</label>
+        <input id="password" type="password" class="w-full border px-2 py-2 rounded" required>
       </div>
       <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded w-full">Login</button>
     </form>
-    <p class="mt-4 text-center">
-      <a href="register.html" class="text-blue-600">New Registration</a>
-    </p>
+    <button id="registerBtn" class="mt-4 text-blue-600 underline">Create new account</button>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
